<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="200sp"
                android:paddingLeft="2sp"
                android:paddingRight="2sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="Your email address"
                    android:textColor="@color/darkblue"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/Email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/emailcheck"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/edittext_bg"
                    android:paddingLeft="10sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/previous"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonround"
                        android:text="Go to Login"
                        android:textColor="#ffffff"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/submitt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:layout_weight="1"
                        android:background="@drawable/buttonround"
                        android:text="Submit"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <TextView
                    android:id="@+id/result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30sp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingLeft="2sp"
                android:paddingRight="2sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register here"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="First name"
                    android:textStyle="bold"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:backgroundTint="@color/grey"
                    android:paddingLeft="5sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Last name"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/lname"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:paddingLeft="5sp"
                    android:backgroundTint="@color/grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="Email"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/Personalemail"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:paddingLeft="5sp"
                    android:backgroundTint="@color/grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/Pass"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:inputType="textPassword"
                    android:paddingLeft="5sp"
                    android:backgroundTint="@color/grey"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/Mobileno"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/Mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:paddingLeft="5sp"
                    android:backgroundTint="@color/grey"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="Industry"
                    android:textStyle="bold"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/industry"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/spinner_bg"
                    android:paddingLeft="10sp" />

                <EditText
                    android:id="@+id/otherindustry"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:layout_marginTop="10sp"
                    android:visibility="gone"
                    android:padding="5sp" />
                <Button
                    android:id="@+id/Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/buttonround"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />

            </LinearLayout>

        </FrameLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>